All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <description>Event start date</description>
    <label>ActivityDate</label>
    <type>Date</type>
</CustomField>