All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTime__c</fullName>
    <description>Event start date/time</description>
    <label>ActivityDateTime</label>
    <type>DateTime</type>
</CustomField>