All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/Driving_Time_Home__c.field-meta.xml
<CustomField>
    <fullName>Driving_Time_Home__c</fullName>
    <description>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</description>
    <inlineHelpText>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</inlineHelpText>
    <label>Travel Time Back to Home Base (Mins)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>