All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationInMinutes__c</fullName>
    <description>Event duration</description>
    <label>DurationInMinutes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>