All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <description>Event end date/time</description>
    <label>EndDateTime</label>
    <type>DateTime</type>
</CustomField>