All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/IsAllDayEvent__c.field-meta.xml
<CustomField>
    <fullName>IsAllDayEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is an all-day event?</description>
    <inlineHelpText>Whether this is an all-day event?</inlineHelpText>
    <label>All-Day Event</label>
    <type>Checkbox</type>
</CustomField>