All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the event</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>