All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/Overhead_Time_After__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Time_After__c</fullName>
    <description>Total overhead or flex time at the end of the service at the work order location.</description>
    <inlineHelpText>Total overhead or flex time at the end of the service at the work order location.</inlineHelpText>
    <label>Overhead Time at End of the Job (Mins)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>