All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service team that owns the event. Reference to an existing service team record in ServiceMax</description>
    <label>Service Team</label>
    <referenceTo>Service_Group__c</referenceTo>
    <relationshipLabel>ServiceMax Events</relationshipLabel>
    <relationshipName>SVMX_Event</relationshipName>
    <type>Lookup</type>
</CustomField>