All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/SM_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_Appointment_Status__c</fullName>
    <description>The status of the Event.</description>
    <label>Appointment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>