All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/SM_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_Version_Number__c</fullName>
    <description>This field increments by 1 for every mapped field update for Service Board to check conflicts and apply correct updates.</description>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>