All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <description>Event start date/time</description>
    <label>StartDateTime</label>
    <type>DateTime</type>
</CustomField>