All_Component_DX/force-app/main/default/objects/SVMX_Event__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <description>The source record related to the event</description>
    <label>WhatId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>